<resources>
    <string name="app_name">madcamp_week1_rev</string>
    <string name="contact">Contact</string>
    <string name="gallery">Gallery</string>
    <string name="weather">Weather</string>
    <string name="defaultMessage">Default</string>
    <string name="nameTitle">이름</string>
    <string name="numberTitle">전화번호</string>
    <string name="memoTitle">메모</string>
    <string name="search">검색어를 입력하세요</string>
    <string name="edit">편집</string>
    <string name="complete">완료</string>
    <string name="cancel">취소</string>
    <string name="deleteMessage">연락처 삭제</string>
    <string name="imageAddition">사진 추가</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>