<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/contactTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/contact"
            android:text="@string/contact" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/galleryTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/gallery"
            android:text="@string/gallery" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/weatherTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/weather_icon"
            android:text="@string/weather" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tabLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>