<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    app:circularflow_radiusInDP="50dp"
    tools:context=".ContactDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pnContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profilePart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/defaultMessage"
                android:foregroundGravity="center"
                android:paddingTop="50dp"
                android:src="@drawable/contact"
                app:layout_constraintHeight_percent="0.4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/namePart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="40dp"
                android:text="@string/defaultMessage"
                android:textAlignment="center"
                android:textSize="30sp"
                android:typeface="normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePart"
                tools:layout_editor_absoluteY="300dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/gray"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pnContainer">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/numberPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rect_shape"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/numberTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="13dp"
                    android:text="@string/numberTitle"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultMessage"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/numberTitle"
                    tools:layout_editor_absoluteX="10dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/memoPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_rect_shape"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/numberPart">

                <TextView
                    android:id="@+id/memoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="13dp"
                    android:text="@string/memoTitle"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

                <TextView
                    android:id="@+id/memo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/defaultMessage"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/memoTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>